update: update requirements and mountain car problem .py file

--- a/Mountain_Car_Problem_RL.ipynb
+++ b/Mountain_Car_Problem_RL.ipynb
@@ -892,12 +892,37 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jnIxlUY0cGSz"
-      },
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'cells' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Extracting the code cells from the notebook and converting them to a Python script\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m code_cells \u001b[38;5;241m=\u001b[39m [cell \u001b[38;5;28;01mfor\u001b[39;00m cell \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcells\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m cell[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcell_type\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcode\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Combine the source of all code cells\u001b[39;00m\n\u001b[1;32m      6\u001b[0m code_content \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(cell[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msource\u001b[39m\u001b[38;5;124m'\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m cell \u001b[38;5;129;01min\u001b[39;00m code_cells])\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'cells' is not defined"
+          ]
+        }
+      ],
       "source": [
-        "## <b><span style='color:darkred'>Thank you for your attention😊🚗💥<b><span>"
+        "# Extracting the code cells from the notebook and converting them to a Python script\n",
+        "\n",
+        "code_cells = [cell for cell in cells if cell['cell_type'] == 'code']\n",
+        "\n",
+        "# Combine the source of all code cells\n",
+        "code_content = \"\\n\\n\".join([\"\\n\".join(cell['source']) for cell in code_cells])\n",
+        "\n",
+        "# Save the code content to a Python file\n",
+        "python_file_path = 'Mountain_Car_Problem_RL.py'\n",
+        "\n",
+        "with open(python_file_path, 'w') as file:\n",
+        "    file.write(code_content)\n",
+        "\n",
+        "python_file_path\n"
       ]
     }
   ],
@@ -921,7 +946,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.4"
+      "version": "3.8.2"
     }
   },
   "nbformat": 4,
